@@ -58,6 +58,7 @@ jsonrpc = localhost:8000
 #smtp_tls = False
 #smtp_password = False
 #smtp_user = False
+#smtp_default_from_email = False
 
 # Configure the path to store attachments and sqlite database
 #data_path = /var/lib/trytond
