@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<form string="Request Link" col="6">
-    <label name="name"/>
-    <field name="name"/>
-    <label name="model"/>
-    <field name="model"/>
-    <label name="priority"/>
-    <field name="priority"/>
-</form>
